k8s/networking/ticketing-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-auth
  ports:
    - port: 8080
      name: http-web
      targetPort: http-web
      protocol: TCP
