k8s/networking/ticketing-expiration-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-expiration-redis-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-expiration-redis
  ports:
    - port: 6379
      name: tcp-connection
      targetPort: tcp-connection
      protocol: TCP
