k8s/networking/ticketing-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-orders
  ports:
    - port: 8080
      name: http-web
      targetPort: http-web
      protocol: TCP
