k8s/networking/ticketing-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-payments
  ports:
    - port: 8080
      name: http-web
      targetPort: http-web
      protocol: TCP
