k8s/networking/ticketing-tickets-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-postgres-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-tickets-postgres
  ports:
    - port: 5432
      name: tcp-connection
      targetPort: tcp-connection
      protocol: TCP
