k8s/networking/ticketing-tickets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-service
spec:
  type: ClusterIP
  selector:
    app: ticketing-tickets
  ports:
    - port: 8080
      name: http-web
      targetPort: http-web
      protocol: TCP
