k8s/networking/ticketing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ticketing-auth-service
                port:
                  number: 8080
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: ticketing-tickets-service
                port:
                  number: 8080
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: ticketing-orders-service
                port:
                  number: 8080
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: ticketing-payments-service
                port:
                  number: 8080
